# sensor-anomaly-edge

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
edge/: score_csv.py  score_stream.py  stream_csv.py
src/sensad/: baseline.py  cli.py  eval.py  export.py  infer.py  stream.py  synth.py  train.py
tests/: test_smoke.py
